takamaka_examples/src/takamaka/tests/errors/inconsistententry1/Sub.java
package takamaka.tests.errors.inconsistententry1;

import io.takamaka.code.annotations.Entry;

public class Sub extends Super {
	public @Entry void m() {}
}